# chalumo

./: Makefile  README.rst  freezer.py  frozen.txt  setup.cfg  sphinx_reload.py
chalumo/: __init__.py  diff.py  discovery.py  fixer.py  logger.py  parser.py
chalumo/cli/: base.py  diff.py  entrypoint.py  reformat.py  version.py
chalumo/processors/: __init__.py
docs/: cli.rst  conf.py  development.rst  history.rst  index.rst  install.rst  requirements.txt
docs/core/: discovery.rst  exceptions.rst  fixer.rst  hello.rst  index.rst  logger.rst  parser.rst  processors_base.rst  processors_django.rst  reformat.rst
html_classes_linter/: __init__.py  diff.py  discovery.py  exceptions.py  fixer.py  hello.py  linter.py  parser.py  processor.py  reformat.py
html_classes_linter/cli/: entrypoint.py
html_classes_linter/processors/: __init__.py  django.py
tests/: conftest.py
tests/001_base/: 002_class_order.py  010_discovery.py  020_parser.py  030_processor.py  030_reformat.py  040_reformat.py  100_diff.py  110_reformat.py
tests/001_core/: 010_discovery.py  020_parser.py  030_processor.py
tests/001_hello/: 001_hello_base.py  02_hello_html.py
tests/100_cli/: 001_cli_version.py  010_greet.py
tests/100_front/: 110_diff.py  120_reformat.py
tests/200_cli/: 200_version.py  210_diff.py  220_reformat.py
tests/data_fixtures/sample_structure/: basic.html  empty.html  no_content.html
tests/data_fixtures/sample_structure/subdir_1/: notag_ping.html  ping.html
tests/data_fixtures/sample_structure/subdir_1/subdir_1_1/: pong.html
tests/data_fixtures/sample_structure/subdir_2/: not_html.txt  notag_zip.html
tests/data_fixtures/sample_structure/subdir_2/subdir_2_1/: zap.html
