;;
;; HTML classes linter package
;;
[metadata]
name = chalumo
version = 0.4.1
description = A simple script to lint, diff or reformat HTML 'class' attribute values
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/chalumo
license = MIT
keywords = Python
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0

[options]
include_package_data = True
install_requires =
    click>=8.0
    Django>=3.0,<4.2
    colorama
    colorlog
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest
quality =
    flake8
    twine
    tox
doc =
    sphinx
    sphinx-rtd-theme
    livereload

[options.packages.find]
where = .
exclude=
    data
    docs
    tests

[options.entry_points]
console_scripts =
    chalumo = chalumo.cli.entrypoint:cli_frontend

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{38,39}-django{3,4}

[testenv]

deps =
    django3: Django>=3.0,<4.0
    django4: Django>=4.0,<4.2

commands =
    pip install -e .[dev]
    pytest -vv tests
